# pmpp

./: .gitignore  CMakeLists.txt  README.md
assets/tests/mat_vec/: test_1.f32
src/: color_to_grayscale.cu  image_blur.cu  main.cu  matmul.cu  types.h  utils.h  vec_add.cu
